--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "meet-the-music-back-end",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Anthony Mini",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
