--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "npx db:drop": "npx typeorm schema:drop",
+    "db:init": "node scripts/postgres/dbInit.js",
+    "db:drop": "npx typeorm-ts-node-commonjs schema:drop -d migration-config.ts && node scripts/postgres/dbDrop.js",
+    "db:migrate": "npx typeorm-ts-node-commonjs migration:run -d migration-config.ts",
+    "db:migrate:create": "npx typeorm migration:create",
+    "db:reinit": "npm run db:drop && npm run db:init && npm run db:migrate",
+    "db:revert": "npx typeorm-ts-node-commonjs migration:revert -d migration-config.ts",
+    "db:show": "npx typeorm-ts-node-commonjs migration:show -d migration-config.ts",
+    "db:cache:clear": "npx typeorm-ts-node-commonjs cache:clear -d migration-config.ts",
+    "db:log": "npx typeorm-ts-node-commonjs schema:log -d migration-config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -18,17 +26,18 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.2.0",
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -36,7 +45,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^16.11.10",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -49,9 +58,9 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "4.5.2"
   },
   "jest": {
     "moduleFileExtensions": [
