--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-run-name: $({ github.actor}) is testing out Github Actions 🚀
+run-name: ${{ github.actor}} is testing out Github Actions 🚀
 
 on:
   pull_request:
@@ -14,9 +14,9 @@ jobs:
         node-version: [20.11.1]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
