--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,5 @@
-name: CI
-run-name: ${{ github.actor}} is testing out Github Actions 🚀
+name: Build And Test
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
   pull_request:
@@ -19,9 +19,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
       - name: Install dependencies
         run: npm install
+
       - name: Build
         run: npm run build
+
       - name: Run tests
         run: npm run test
