--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Build And Test
+name: CI
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 
 on:
@@ -11,7 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.11.1]
+        # Spécifie la LTS de Node.js à utiliser pour les tests
+        node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,12 +21,19 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-
       - name: Install dependencies
         run: npm install
-
       - name: Build
         run: npm run build
-
       - name: Run tests
         run: npm run test
+
+  dependency-review:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
