--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         # Spécifie la LTS de Node.js à utiliser pour les tests
-        node-version: [20.x]
+        node-version: [20.11.1]
 
     steps:
       - uses: actions/checkout@v4
