Mise à jour des workflows GitHub Actions et GitGuardian Scan

--- a/.github/workflows/gitguardian.yml
+++ b/.github/workflows/gitguardian.yml
@@ -3,7 +3,8 @@ run-name: ${{ github.actor }} is testing out GitGuardian Scan 🔐
 
 on:
   pull_request:
-  branches: '*'
+    branches:
+      - '*'
 
 jobs:
   scanning:
