--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: myusername
+      POSTGRES_PASSWORD: myuserpassword
+      POSTGRES_DB: local-meet-the-music
     volumes:
       - data-postgres:/var/lib/postgresql/data
     ports:
-      - '${DB_PORT}:5432'
+      - '5432:5432'
 
 volumes:
   data-postgres:
