--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "class-validator": "^0.14.1",
     "dotenv-expand": "^10.0.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
