--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv-expand": "^10.0.0",
+    "helmet": "^7.1.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
