--- a/.github/workflows/gitguardian.yml
+++ b/.github/workflows/gitguardian.yml
@@ -17,5 +17,7 @@ jobs:
           fetch-depth: 0 # Fetch all history for multiple commits to be scanned
       - name: GitGuardian scan
         uses: GitGuardian/ggshield-action@v1.25.0
+        with:
+          args: --config ggshield.yml
         env:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
